--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!-- Header -->
         <header class="text-center mb-10">
             <div class="profile-img-container mb-6">
-                <img src="https://i.ibb.co/XfXvXw0/image.png" 
+                <img src="https://i.ibb.co/bj8KJSfr/a393fdb6-03bd-4258-b450-78b0e0d643aa.jpg" 
                      alt="6lp_w Logo" 
                      class="w-full h-full object-cover rounded-full bg-white p-1">
             </div>
